--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<div th:replace="fragments/heads :: head"></div>
+<div th:replace="~{fragments/heads :: head}"></div>
 <body class="font">
 <div class="d-flex flex-column vh-100 bg-secondary">
     <header class="flex-shrink-0 shadow rounded border-bottom border-black">
@@ -45,9 +45,9 @@
         </div>
     </main>
 
-    <div th:replace="fragments/footers :: footer"></div>
+    <div th:replace="~{fragments/footers :: footer}"></div>
 </div>
 
-<div th:replace="fragments/scripts :: scripts"></div>
+<div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
