--- a/src/main/resources/templates/test-join.html
+++ b/src/main/resources/templates/test-join.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<div th:replace="fragments/heads :: head"></div>
+<div th:replace="~{fragments/heads :: head}"></div>
 <body class="font">
 <div class="d-flex flex-column vh-100 gap-5">
-    <div th:replace="fragments/headers :: header"></div>
+    <div th:replace="~{fragments/headers :: header}"></div>
 
-    <main
-            class="container d-flex justify-content-center align-items-center flex-grow-1"
-    >
+    <main class="container d-flex justify-content-center align-items-center flex-grow-1">
         <div class="row gap-3 flex-fill">
             <div class="col-sm-1 flex-fill align-self-center">
                 <form
@@ -15,9 +13,9 @@
                         class="bg-secondary rounded shadow border border-black border-2 p-5 d-flex flex-column"
                 >
                     <div class="mb-3 flex-fill text-center">
-                        <label for="testCode" class="form-label fs-4 text-white"
-                        >Enter Test Code:</label
-                        >
+                        <label for="testCode" class="form-label fs-4 text-white">
+                            Enter Test Code:
+                        </label>
                         <input
                                 type="text"
                                 class="form-control border border-black fs-6"
@@ -38,41 +36,29 @@
                 <div class="container">
                     <div class="row">
                         <div class="col">
-                            <div
-                                    class="d-flex flex-column gap-2 bg-secondary rounded shadow border border-black border-2 p-3 d-flex flex-column"
-                            >
+                            <div class="d-flex flex-column gap-2 bg-secondary rounded shadow border border-black border-2 p-3 d-flex flex-column">
                                 <h3 class="text-white text-center">Previous Results:</h3>
-                                <div
-                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                                >
+                                <div class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5">
                                     <div class="test-name">MAT #1</div>
                                     <div class="test-name">24.05.24</div>
                                     <div class="test-result">0/10</div>
                                 </div>
-                                <div
-                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                                >
+                                <div class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5">
                                     <div class="test-name">BEL #2</div>
                                     <div class="test-name">21.05.24</div>
                                     <div class="test-result">10/10</div>
                                 </div>
-                                <div
-                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                                >
+                                <div class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5">
                                     <div class="test-name">AE #3</div>
                                     <div class="test-name">20.05.24</div>
                                     <div class="test-result">3/10</div>
                                 </div>
-                                <div
-                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                                >
+                                <div class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5">
                                     <div class="test-name">AE #4</div>
                                     <div class="test-name">19.05.24</div>
                                     <div class="test-result">6/10</div>
                                 </div>
-                                <div
-                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                                >
+                                <div class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5">
                                     <div class="test-name">MAT #5</div>
                                     <div class="test-name">18.05.24</div>
                                     <div class="test-result">9/10</div>
@@ -90,9 +76,9 @@
         </div>
     </main>
 
-    <div th:replace="fragments/footers :: footer"></div>
+    <div th:replace="~{fragments/footers :: footer}"></div>
 </div>
 
-<div th:replace="fragments/scripts :: scripts"></div>
+<div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
