--- a/src/main/resources/templates/fragments/question.html
+++ b/src/main/resources/templates/fragments/question.html
@@ -1,55 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head th:fragment="head">
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>TestingEz</title>
-    <link
-            rel="icon"
-            type="image/x-icon"
-            href="/images/school.png"
-    />
-    <link rel="stylesheet" href="/css/reset.css"/>
-    <link rel="stylesheet" href="/css/typography.css"/>
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-            crossorigin="anonymous"
-    />
-</head>
+<div th:replace="~{fragments/heads :: head}"></div>
 <body>
 
-<div class="container mt-5">
-    <h1 class="text-center">Kahoot Question</h1>
-    <form>
-        <div class="form-group">
+<div class="container">
+    <div th:fragment="question-form">
+        <h2 class="text-center">Question #?</h2>
+        <div class="form-group mb-3">
             <input type="text" class="form-control" id="question" placeholder="Enter your question">
         </div>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 mb-1">
                 <div class="form-group">
                     <input type="text" class="form-control" id="answer1" placeholder="Enter answer 1">
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 mb-1">
                 <div class="form-group">
                     <input type="text" class="form-control" id="answer2" placeholder="Enter answer 2">
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 mb-2">
                 <div class="form-group">
                     <input type="text" class="form-control" id="answer3" placeholder="Enter answer 3">
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 mb-2">
                 <div class="form-group">
                     <input type="text" class="form-control" id="answer4" placeholder="Enter answer 4">
                 </div>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary btn-block">Submit</button>
-    </form>
+    </div>
 </div>
 
 </body>
