--- a/src/main/resources/templates/questions-create.html
+++ b/src/main/resources/templates/questions-create.html
@@ -8,11 +8,12 @@
         <div class="container">
             <form>
                 <div th:each="i : ${#numbers.sequence(1, questionsCount)}"
-                     th:insert="fragments/question.html :: question-form">
+                     th:insert="~{fragments/question.html :: question-form(i=${i})}">
                 </div>
-                <div class="d-flex justify-content-center gap-1">
-                    <button type="button" class="btn btn-success">Complete</button>
-                    <button type="button" class="btn btn-danger">Cancel</button>
+                <div class="d-flex justify-content-center gap-1 mt-3">
+                    <button type="button" class="btn btn-success border border-black border-2 shadow fs-4">Complete
+                    </button>
+                    <button type="button" class="btn btn-danger border border-black border-2 shadow fs-4">Cancel</button>
                 </div>
             </form>
         </div>
