--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -11,6 +11,7 @@
               novalidate
               th:method="@{/account/login}"
               th:object="${userSignInData}">
+            <div th:if="${invalidCredentials}" class="text-danger fs-6 text-center">invalid credentials</div>
             <label for="username" class="form-label">Username:</label>
             <div class="input-group">
                 <span class="input-group-text border-black" id="inputGroupPrepend">@</span>
@@ -31,7 +32,7 @@
             <label for="password" class="form-label">Password:</label>
             <div class="input-group">
                 <input
-                        class="form-control border border-black mb-3 fs-6"
+                        class="form-control border border-black fs-6"
                         id="password"
                         name="password"
                         placeholder="Enter password"
@@ -40,9 +41,13 @@
                         type="password"
                 />
             </div>
+            <div
+                    th:if="${#fields.hasErrors('password')}"
+                    th:errors="*{password}"
+                    class="text-danger fs-6"></div>
             <button
                     type="submit"
-                    class="btn btn-secondary border border-black border-2 shadow rounded fs-5"
+                    class="btn btn-secondary border border-black border-2 shadow rounded fs-5 mt-3"
             >
                 Sign In
             </button>
