TestController code refactored

--- a/src/main/resources/templates/test-create.html
+++ b/src/main/resources/templates/test-create.html
@@ -13,7 +13,7 @@
                     method="post"
                     novalidate
                     th:action="@{/test/create}"
-                    th:object="${testCreateDTO}">
+                    th:object="${testCreateData}">
                 <h1 class="text-center">Create Test</h1>
                 <div class="row row-cols-1 row-cols-md-2 mb-2">
                     <div class="col">
