--- a/src/main/resources/templates/questions-create.html
+++ b/src/main/resources/templates/questions-create.html
@@ -6,14 +6,81 @@
 
     <main class="d-flex align-items-center flex-grow-1 p-3">
         <div class="container">
-            <form>
-                <div th:each="i : ${#numbers.sequence(1, questionsCount)}"
-                     th:insert="~{fragments/question.html :: question-form(i=${i})}">
+            <form
+                    th:object="${testQuestionsData}"
+                    th:action="@{/questions}"
+                    method="post"
+            >
+                <div th:each="question, questionIndex : ${testQuestionsData.questions}">
+                    <h2 class="text-center">Question #<span th:text="${questionIndex.index + 1}"></span></h2>
+                    <div class="form-group mb-3">
+                        <input class="form-control border border-black border-2 shadow fs-5 text-center"
+                               id="question"
+                               name="question"
+                               placeholder="Enter your question"
+                               th:field="*{questions[__${questionIndex.index}__].question}"
+                               type="text">
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 mb-1">
+                            <div class="form-group">
+                                <input class="form-control border border-black shadow fs-5"
+                                       id="answer1"
+                                       name="answer1"
+                                       placeholder="Enter answer 1"
+                                       type="text">
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-1">
+                            <div class="form-group">
+                                <input class="form-control border border-black shadow fs-5"
+                                       id="answer2"
+                                       name="answer1"
+                                       placeholder="Enter answer 2"
+                                       type="text">
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-2">
+                            <div class="form-group">
+                                <input class="form-control border border-black shadow fs-5"
+                                       id="answer3"
+                                       name="answer1"
+                                       placeholder="Enter answer 3"
+                                       type="text">
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-2">
+                            <div class="form-group">
+                                <input class="form-control border border-black shadow fs-5"
+                                       id="answer4"
+                                       name="answer1"
+                                       placeholder="Enter answer 4"
+                                       type="text">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-sm-8 col-md-2 text-end">
+                            <input class="form-control border border-black shadow fs-5"
+                                   id="correctAnswer"
+                                   name="correctAnswer"
+                                   placeholder="correct answer"
+                                   type="text">
+                        </div>
+                        <div class="col-sm-4 col-md-2">
+                            <input class="form-control border border-black shadow fs-5 text-center"
+                                   id="points"
+                                   name="points"
+                                   placeholder="points"
+                                   type="number">
+                        </div>
+                    </div>
                 </div>
                 <div class="d-flex justify-content-center gap-1 mt-3">
-                    <button type="button" class="btn btn-success border border-black border-2 shadow fs-4">Complete
+                    <button type="submit" class="btn btn-success border border-black border-2 shadow fs-4">Complete
                     </button>
-                    <button type="button" class="btn btn-danger border border-black border-2 shadow fs-4">Cancel</button>
+                    <button type="button" class="btn btn-danger border border-black border-2 shadow fs-4">Cancel
+                    </button>
                 </div>
             </form>
         </div>
